--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ local.properties
 .classpath
 .settings/**
 .loadpath
+.factorypath
 /src/main/resources/rebel.xml
 
 # External tool builders
@@ -127,3 +128,4 @@ Desktop.ini
 # Maven Wrapper
 ######################
 !.mvn/wrapper/maven-wrapper.jar
+/.apt_generated/
