--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,4 +1,5 @@
 #H2 Server Properties
+#Sun Feb 07 01:50:29 CET 2016
 0=JHipster H2 (Memory)|org.h2.Driver|jdbc\:h2\:mem\:forecast|
 webAllowOthers=true
 webPort=8082
